# codesight

./: .gitignore  .pre-commit-hooks.yaml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  SECURITY.md  action.yml  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  security-scan.yml
codesight/: __init__.py  __main__.py  analyzer.py  artifacts.py  benchmark.py  cli.py  compression.py  config.py  context.py  cost.py  findings.py  formatters.py  i18n.py  judge.py  pipeline.py  profiles.py  sarif.py  streaming.py  templates.py  verify.py
codesight/providers/: __init__.py  anthropic_provider.py  base.py  custom_provider.py  factory.py  google_provider.py  ollama_provider.py  openai_provider.py
docs/: BENCHMARKS.md  CNAME  SARIF_VERIFY.md  index.html  script.js  style.css
docs/docs/: api.html  architecture.html  benchmarks.html  ci-cd.html  commands.html  contributing.html  index.html  installation.html  providers.html  quickstart.html  script.js  security.html  style.css  templates.html  verify.html
examples/framework-profiles/: README.md  ai-agent-tool.sarif  express-path.sarif  fastapi-tenant.sarif  proof-manifest.json
examples/framework-profiles/ai-agent-project/: agent.py
examples/framework-profiles/express-project/: server.js
examples/framework-profiles/fastapi-project/: app.py
examples/semgrep-verify/: README.md  expected-import-report.md  expected-import.sarif  proof-manifest.json  proof-notes.md  sample-preview-context.json  semgrep.sarif
examples/semgrep-verify/project/: app.py
paper/: benchmarking_llms_security.md
tests/: test_analyzer.py  test_artifacts.py  test_benchmark.py  test_cli.py  test_compression.py  test_config.py  test_context.py  test_custom_provider.py  test_findings.py  test_formatters.py  test_judge.py  test_profiles.py  test_sarif.py  test_streaming.py  test_templates.py  test_verify.py
tests/fixtures/: codeql_sample.sarif  evidence_report.md  semgrep_sample.sarif
tests/fixtures/sample_project/: app.py
vscode-extension/: .eslintrc.json  .vscodeignore  README.md  package-lock.json  package.json
vscode-extension/src/: extension.ts
